--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Login Form</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Login Form</h1>
+    <form id="loginForm">
+        <input type="text" id="username" placeholder="Username" required><br><br>
+        <input type="password" id="password" placeholder="Password" required><br><br>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox">Remember me</label><br><br>
+        <input type="submit" id="submit" value="Submit">
+    </form>
+    <button id="existing" style="display: none;">Login as existing user</button>
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
