--- a/main.html
+++ b/main.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="login-container">
-    <h1>Login Form</h1>
-    <form id="loginForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <div>
-        <input type="checkbox" id="checkbox">
-        <label for="checkbox">Remember me</label>
-      </div>
-      <input type="submit" id="submit" value="Submit">
-    </form>
-    <button id="existing" style="display: none;">Login as existing user</button>
-  </div>
+    <div class="container">
+        <h1>Login Form</h1>
+        
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" placeholder="Username">
+            </div>
 
-  <script src="script.js"></script>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="Password">
+            </div>
+
+            <div class="form-group">
+                <input type="checkbox" id="checkbox">
+                <label for="checkbox">Remember me</label>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" id="submit" value="Submit">
+            </div>
+        </form>
+
+        <!-- This button will appear only if there are saved details -->
+        <button id="existing" style="display:none;">Login as existing user</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
